[package]
name = "git-hanoi"
version = "0.0.1"
edition = "2021"

authors = ["Stephen Jung <tummychow511@gmail.com>", "Manos Pitsidianakis <manos@pitsidianak.is>"]
description = ""
homepage = "https://github.com/epilys/git-hanoi"
repository = "https://github.com/epilys/git-hanoi"
readme = "README.md"
license = "EUPL-1.2"

include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]

[[bin]]
name = "git-hanoi"
path = "src/main.rs"

[dependencies]
anyhow = "~1.0"
clap = "~2.33"
cursive = "0.20"
git2 = { version = "~0.16", default-features = false }
memchr = "~2.3"
slog = "~2.5"
slog-async = "~2.5"
slog-term = "~2.6"

[dev-dependencies]
tempfile = "3"
